# catdel

./: .gitignore  .replit  README.md  pyproject.toml  replit.nix  streams.dbf  streams.shp  streams.shx  test.dbf  test.py  test.shp  test.shx
.streamlit/: config.toml
archive/: main2.py
catdel/: add_ga.py  components.py  config.py  db.py  grid_processors.py  helpers.py  logger.py  main.py  main_old.py  process.py  projection.py  state_manager.py
catdel/components/: __init__.py  base_component.py  buttons.py  dem_uploader.py  feature_request.py  folium_map.py  map.py  misc.py
catdel/database/: database.py
catdel/folium_elements/: outlet_selector.py
catdel/process/: dem_processing.py  input_output.py  utils.py
catdel/visualization/: pyplot.py
catdel0/: config.py  db.py  main.py  object_store.py  projection.py  state_manager.py
catdel0/components/: __init__.py  buttons.py  folium_map.py  footer.py  misc.py  plugins.py
nbs/: 001_dev_load_grid_and_plot_it.ipynb
sample_data/: sample_dem.tif
tests/: test_projection.py
